        ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========

        ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========

        ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========

        ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========

        ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========

        ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========

        ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/27/2006 ========

2006-10-27  Brian Kahne  <bkahne@freescale.com>

	* opencxx/Environment.cc (Append):  Removed an explicit delete
	which was causing a free() error b/c the memory was not allocated
	by the system but rather by GC.

2006-08-14  Brian Kahne  <bkahne@freescale.com>

	* opencxx/Environment.cc (DumpAll): Added a dump-everything
	function for debugging purposes.

        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

2006-03-21  Brian Kahne  <bkahne@freescale.com>

	* Moved the website to Compass so that everyone can access it.

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======
