@@ -1,11 +1,11 @@
 
 CLEANFILES= *.ii
 
-PLASMA = $(top_srcdir)/scripts/plasma --devel=$(top_srcdir)
+PLASMA = $(top_builddir)/scripts/plasma --devel-src=$(top_srcdir) --devel-build=$(top_builddir)
 
-AM_LDFLAGS = -L$(top_srcdir)/src/.libs -Wl,-R$(top_srcdir)/src/.libs \
-	-L$(top_srcdir)/qt/.libs -Wl,-R$(top_srcdir)/qt/.libs \
-	-L$(top_srcdir)/gc/.libs -Wl,-R$(top_srcdir)/gc/.libs
+AM_LDFLAGS = -L$(top_builddir)/src/.libs -Wl,-R$(top_builddir)/src/.libs \
+	-L$(top_builddir)/qt/.libs -Wl,-R$(top_builddir)/qt/.libs \
+	-L$(top_builddir)/gc/.libs -Wl,-R$(top_builddir)/gc/.libs
 # This must be added to each C++ file's LDADD variable.
 CXX_LDADD =  -lplasma -lqt -lgc -ldl
 
@@ -13,7 +13,7 @@ CXXLD = $(CXX)
 LINK = $(PLASMA) -o $@
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 
-DEPENDENCIES = $(top_srcdir)/src/.libs/libplasma.a
+DEPENDENCIES = $(top_builddir)/src/.libs/libplasma.a
 
 # Use this for libtool linking- I didn't want the wrapper scripts, so I just do it manually.
 #LDADD = $(top_srcdir)/src/libplasma.la $(top_srcdir)/qt/libqt.la $(top_srcdir)/gc/libgc.la -ldl
