@@ -1,1 +1,1 @@
-tests/in7.c:12:  Error:  Duplicate identifier.  Original is at tests/in7.c:8.
+in7.c:12:  Error:  Duplicate identifier.  Original is at in7.c:8.
