@@ -1,1 +1,1 @@
-tests/in8.c:8:  Error:  Invalid lvalue:  Not an address.
+in8.c:8:  Error:  Invalid lvalue:  Not an address.
