@@ -1,3 +1,3 @@
-tests/in10.c:13:  Warning:  Function foo does not return through all branches.
+in10.c:13:  Warning:  Function foo does not return through all branches.
 
 Compile succeeded.
