@@ -3,7 +3,8 @@
 #
 # Tests used in this regression.
 
-use lib "..";
+use FindBin;
+use lib "$FindBin::RealBin/..";
 use rdriver;
 use regress_utils;
 use strict;
@@ -12,45 +13,46 @@ use Data::Dumper;
 my @Tests = (
 			 # Test of user-defined statements in outer-most scope.
 			 {
-			  cmd  => "./parse-test -E in1.C",
-			  diff => "in1.regress",
+			  cmd  => "./parse-test -E $src/in1.C",
+			  diff => "$src/in1.regress",
 			 },
 			 # Test of lambda functions (func).
 			 {
-			  cmd  => "./parse-test -E in2.C",
-			  diff => "in2.regress",
+			  cmd  => "./parse-test -E $src/in2.C",
+			  diff => "$src/in2.regress",
 			 },
 			 # Test of long-strings.
 			 {
-			  cmd  => "./parse-test -E in3.C",
-			  diff => "in3.regress",
+			  cmd  => "./parse-test -E $src/in3.C",
+			  diff => "$src/in3.regress",
 			 },
 			 # Another test of lambda functions.
 			 {
-			  cmd  => "./parse-test -E in4.C",
-			  diff => "in4.regress",
+			  cmd  => "./parse-test -E $src/in4.C",
+			  diff => "$src/in4.regress",
 			 },
 			 # Test of booleans.
 			 {
-			  cmd  => "./parse-test -E in5.C",
-			  diff => "in5.regress",
+			  cmd  => "./parse-test -E $src/in5.C",
+			  diff => "$src/in5.regress",
 			 },
 			 # Test of templates w/integer parms.
 			 {
-			  cmd  => "./parse-test -E in6.C",
-			  diff => "in6.regress",
+			  cmd  => "./parse-test -E $src/in6.C",
+			  diff => "$src/in6.regress",
 			 },
              # Test of improperly formed long strings.
 			 {
-			  cmd    => "./parse-test -E in7.C",
-			  diff   => "in7.regress",
-			  stderr => 1,
-			  fail   => 255,
+			  cmd     => "./parse-test -E $src/in7.C",
+			  checker => sub { filter_errors(@_[0],"in7.out","$src/in7.regress"); },
+			  stderr  => 1,
+			  fail    => 255,
+			  temps   => [ "in7.out" ],
 			 },
 			 # Test of nested functions.
 			 {
-			  cmd  => "./parse-test -E in8.C",
-			  diff => "in8.regress",
+			  cmd  => "./parse-test -E $src/in8.C",
+			  diff => "$src/in8.regress",
 			 },
 			);
 
