@@ -3,11 +3,14 @@
 #
 # Tests used in this regression.
 
-use lib "..";
+use FindBin;
+use lib "$FindBin::RealBin/..";
 use rdriver;
 use regress_utils;
 use strict;
 use Data::Dumper;
+
+use vars qw($src );
 
 my @Tests = (
 			 # Test of alt blocks.
