@@ -1,3 +1,8 @@
+2006-10-30  Brian Kahne  <bkahne@freescale.com>
+
+	* Plasma should now build correctly if configured and built from a
+	different directory than where the source is located.
+
         ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========
 
         ======== plasma release 0.8.27 (v0_8_27) on Linux (lb32001) on 10/30/2006 ========
